<resources>
    <string name="app_name">Cinema</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--Strings for fragment_detail.xml-->
    <string name="movie_info">Movie info</string>
    <string name="genre">Genre: </string>
    <string name="release_date">Release: </string>
    <string name="vote_count">Vote count: </string>
    <string name="rating">Rating: </string>
    <string name="overview">Storyline</string>
    <string name="reviews">Reviews</string>
    <string name="more_reviews">More reviews</string>
    <string name="trailers">Trailers</string>
    <string name="review_button">More reviews</string>>

    <!--Empty view strings-->
    <string name="empty_movie_detail">Please, select a movie to see its details</string>
    <string name="empty_movie_gridview">Please, connect to the Internet to load movies</string>
    <string name="empty_favorite_movie_gridview">There are no favorite movies to show...</string>

    <string name="pref_search_key">search_value</string>
    <string name="pref_search_default" translatable="false">Popular</string>
    <string name="pref_search_topic_title">Default search by</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_favorite">Add to favorite</string>
    <string name="action_share">Share</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_popular">Popular</string>
    <string name="nav_top_rated">Top Rated</string>
    <string name="submenu_genres">Genres</string>
    <string name="nav_action">Action</string>
    <string name="nav_adventure">Adventure</string>
    <string name="nav_animation">Animation</string>
    <string name="nav_comedy">Comedy</string>
    <string name="nav_crime">Crime</string>
    <string name="nav_documentary">Documentary</string>
    <string name="nav_drama">Drama</string>
    <string name="nav_family">Family</string>
    <string name="nav_fantasy">Fantasy</string>
    <string name="nav_foreign">Foreign</string>
    <string name="nav_horror">Horror</string>
    <string name="nav_music">Music</string>
    <string name="nav_mystery">Mystery</string>
    <string name="nav_romance">Romance</string>
    <string name="nav_science_fiction">Science Fiction</string>
    <string name="nav_tv_movie">TV Movie</string>
    <string name="nav_thriller">Thriller</string>
    <string name="nav_war">War</string>
    <string name="nav_western">Western</string>

    <!--Share movie title-->
    <string name="share_movie_message_title">Movie from Cinema</string>

    <!--Toast messages-->
    <string name="removed_from_db">Movie was removed from Favorites</string>
    <string name="saved_to_db">Movie was added to Favorites</string>
    <string name="couldnt_save_to_db">Oops... Movie was not saved</string>
    <string name="youtube_error_msg">Install or update Youtube application to watch trailers</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">moviesapp.example.com</string>
    <string name="content_authority">com.example.android.moviesapp</string>
</resources>
